[tool.poetry]
name = "reppy"
version = "0.1.0"
description = "simple cli tool to split your data files, or combine small files into bigger ones"
authors = ["jakubpluta <plutakuba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
click = "^8.1.7"
ijson = "^3.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
